--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
+    "@vue/eslint-config-typescript": "^11.0.3",
+    "eslint": "^8.44.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-vue": "^9.15.1",
+    "prettier": "^3.0.0",
     "sass": "^1.63.6",
     "typescript": "^5.0.2",
     "vite": "^4.4.0",
